Alterando os Botões

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </div>
         <div class="container2">
           <div class="container-botao">
-            <button id="btnEnviar" type="submit">Add</button>
+            <button id="btnEnviar" type="submit">Adicionar</button>
           </div>
           <div class="container-auxilio">
             <h3>Add outro telefone?</h3>
