--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </div>
             <div class="labels">
               <label for="telefone">Telefone:</label>
-              <input id="telefone" type="number" required>
+              <input id="telefone" type="number" required min="9" max="11">
             </div>
           </fieldset>
         </div>
