Verificador de digitos e validalçao de numero

--- a/index.html
+++ b/index.html
@@ -21,11 +21,14 @@
             <legend>Contatos</legend>
             <div class="labels">
               <label for="nome">Nome:</label>
-              <input id="nome" type="text" required><br>
+              <input id="nome" type="text" required placeholder="Informe seu nome..."><br>
             </div>
             <div class="labels">
               <label for="telefone">Telefone:</label>
-              <input id="telefone" type="number" required min="9" max="11">
+              <input id="telefone" type="text" required placeholder="Informe seu numero...">
+              <p class="bem-aceito">Esta mensagem de exemplo Aceito</p>
+              <p class="aceitavel">Esta mensagem de exemplo Aceitavel</p>
+              <p class="nao-aceito">Esta mensagem de exemplo Não Aceito</p>
             </div>
           </fieldset>
         </div>
